peac_dev/force-app/main/default/objects/Communication_Activity__c/Communication_Activity__c.object-meta.xml
<CustomObject>
    <label>Communication Activity</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communication Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>