peac_dev/force-app/main/default/objects/Communication_Activity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Communication Activities</relationshipLabel>
    <relationshipName>Communication_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>