peac_dev/force-app/main/default/objects/Communication_Activity__c/fields/Clicks__c.field-meta.xml
<CustomField>
    <fullName>Clicks__c</fullName>
    <label>Clicks</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>