peac_dev/force-app/main/default/objects/Communication_Activity__c/fields/Communication_Manager_Link__c.field-meta.xml
<CustomField>
    <fullName>Communication_Manager_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Communication Manager Link</label>
    <type>Url</type>
</CustomField>