peac_dev/force-app/main/default/objects/Communication_Activity__c/fields/Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_ID__c</fullName>
    <label>Event ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>