peac_dev/force-app/main/default/objects/Communication_Activity__c/fields/Opens__c.field-meta.xml
<CustomField>
    <fullName>Opens__c</fullName>
    <label>Opens</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>