peac_dev/force-app/main/default/objects/Communication_Activity__c/fields/Portal_Link__c.field-meta.xml
<CustomField>
    <fullName>Portal_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Portal Link</label>
    <type>Url</type>
</CustomField>