peac_dev/force-app/main/default/objects/Communication_Activity__c/fields/Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Send Date</label>
    <type>DateTime</type>
</CustomField>