peac_dev/force-app/main/default/objects/Communication_Activity__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sender</label>
    <length>100</length>
    <type>Text</type>
</CustomField>